dreamkast/base/deployment-dreamkast.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
  name: dreamkast
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dreamkast
    spec:
      containers:
      - name: dreamkast
        image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ecs:jacopen
        ports:
          - containerPort: 3000
            resources:
