dreamkast/base/deployment-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast-ui
  name: dreamkast-ui
  namespace: dreamkast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: dreamkast-ui
    spec:
      containers:
      - image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ui:master
        name: dreamkast-ui
        ports:
        - containerPort: 3001
        resources: {}
