dreamkast/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
  name: dreamkast
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast
    spec:
      containers:
      - name: dreamkast
        image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ecs
        ports:
          - containerPort: 3000
            resources:

        # livenessProbe:
        #   httpGet:
        #     port: 3000
        #     path: /
        #   failureThreshold: 5
        #   periodSeconds: 5
        # readinessProbe:
        #   httpGet:
        #     port: 3000
        #     path: /
        #   failureThreshold: 5
        #   periodSeconds: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dreamkast
  name: dreamkast-ui
  namespace: dreamkast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dreamkast
      tier: dreamkast-ui
  strategy: {}
  template:
    metadata:
      labels:
        app: dreamkast
        tier: dreamkast-ui
    spec:
      containers:
      - image: 607167088920.dkr.ecr.ap-northeast-1.amazonaws.com/dreamkast-ui
        name: dreamkast-ui
        ports:
        - containerPort: 3001
        resources: {}
