dreamkast/base/service-dreamkast.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamkast-svc
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: dreamkast
