dreamkast/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dreamkast-svc
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb-ip
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: dreamkast
