dreamkast/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dreamkast-ingress
  annotations:
    kubernetes.io/ingress.class: contour
  labels:
    app: dreamkast
spec:
  rules:
    - host: dreamkast.dev.cloudnativedays.jp
      http:
        paths:
          - path: /
            backend:
              serviceName: dreamkast-svc
              servicePort: 80
